--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bip32": "^4.0.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.3",
     "cors": "^2.8.5",
+    "ecpair": "^2.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.14.2",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "tiny-secp256k1": "^2.2.3"
   }
 }
