--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ecpair": "^2.1.0",
     "express": "^4.18.2",
