--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
@@ -23,6 +24,8 @@
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.14.2",
     "sequelize": "^6.32.1",
+    "sharp": "^0.32.4",
+    "tesseract.js": "^4.1.1",
     "tiny-secp256k1": "^2.2.3"
   }
 }
