--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^4.0.1",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.3",
     "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "ecpair": "^2.1.0",
     "express": "^4.18.2",
+    "face-api.js": "^0.22.2",
+    "fast-levenshtein": "^3.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "pg": "^8.11.2",
