--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-router-dom": "^6.14.2",
     "sequelize": "^6.32.1",
     "sharp": "^0.32.4",
+    "socks-proxy-agent": "^8.0.1",
     "tesseract.js": "^4.1.1",
-    "tiny-secp256k1": "^2.2.3"
+    "tiny-secp256k1": "^2.2.3",
+    "tor-request": "^3.1.0",
+    "ws": "^8.13.0"
   }
 }
