--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
+    "bitcoin-core": "^4.1.0",
     "bitcoinjs-lib": "^6.1.3",
     "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
@@ -31,6 +32,7 @@
     "sequelize": "^6.32.1",
     "sharp": "^0.32.4",
     "socks-proxy-agent": "^8.0.1",
+    "socks5-https-client": "^1.2.1",
     "tesseract.js": "^4.1.1",
     "tiny-secp256k1": "^2.2.3",
     "ws": "^8.13.0"
