--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "fast-levenshtein": "^3.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
+    "node-fetch": "^3.3.2",
+    "nth-check": "^2.1.1",
     "pg": "^8.11.2",
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.14.2",
@@ -35,6 +37,7 @@
     "socks5-https-client": "^1.2.1",
     "tesseract.js": "^4.1.1",
     "tiny-secp256k1": "^2.2.3",
+    "tough-cookie": "^4.1.3",
     "ws": "^8.13.0"
   }
 }
