--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tesseract.js": "^4.1.1",
     "tiny-secp256k1": "^2.2.3",
     "tough-cookie": "^4.1.3",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
 }
