--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@mempool/mempool.js": "^2.3.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "bignumber.js": "^9.1.2",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
-    "bitcoin-core": "^4.1.0",
     "bitcoinjs-lib": "^6.1.3",
     "body-parser": "^1.20.2",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ecpair": "^2.1.0",
     "express": "^4.18.2",
     "face-api.js": "^0.22.2",
